packages/typ/tests/fixtures/diagnostics/0397_labels_body_branch_mismatch_10.ml.infer.expected
File "0397_labels_body_branch_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0397_labels_body_branch_mismatch_10 is not a valid module name.

File "0397_labels_body_branch_mismatch_10.ml", line 2, characters 22-26:
2 |   if flag then x else true
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
